style: fix dark mode code

--- a/assets/custom-arena.css
+++ b/assets/custom-arena.css
@@ -44,6 +44,10 @@ body.dark {
   background-color: var(--background-default-grey) !important;
 }
 
+.dark code {
+  background-color: var(--neutral-100);
+}
+
 /* "COMPONENTS" (not custom components) */
 
 /* Radio button as DSFR-ish selectable tiles */
